Update notebook: auto-clone repo, add Xvfb

--- a/BattleCity_DreamerV3.ipynb
+++ b/BattleCity_DreamerV3.ipynb
@@ -17,19 +17,13 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Battle City RL - DreamerV3 Training\n",
+                "# 🎮 Battle City RL - DreamerV3 Training\n",
                 "\n",
-                "This notebook sets up the environment to train a **DreamerV3** agent on **Battle City (NES)**.\n",
+                "This notebook trains a **DreamerV3** agent to play **Battle City (NES)**.\n",
                 "\n",
-                "## Instructions\n",
-                "1. **Upload Files**: Drag and drop the following files from your local project into the Colab file explorer (sidebar on the left):\n",
-                "    - `BattleCity.nes` (The ROM file)\n",
-                "    - `battle_city_env.py`\n",
-                "    - `config.py`\n",
-                "    - `dreamer_wrapper.py`\n",
-                "    - `train_dreamer.py`\n",
-                "2. **Runtime**: Ensure you are using a GPU Runtime (`Runtime` > `Change runtime type` > `T4 GPU` or better).\n",
-                "3. **Run All**: Run the cells below sequentially."
+                "## Setup\n",
+                "1. **Runtime**: Go to `Runtime` > `Change runtime type` > Select **T4 GPU** (or better).\n",
+                "2. **Run All**: Execute cells sequentially (Ctrl+F9)."
             ],
             "metadata": {
                 "id": "intro_md"
@@ -38,8 +32,36 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### 1. Install Dependencies\n",
-                "We need `nes-py` (and its build deps), `gymnasium`, `jax`, and `dreamerv3`."
+                "### 1. Clone Repository\n",
+                "First, we clone the project from GitHub."
+            ],
+            "metadata": {
+                "id": "clone_md"
+            }
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "outputs": [],
+            "source": [
+                "# Clone the repo\n",
+                "!git clone https://github.com/Nikolay1221/x.git battle_city\n",
+                "\n",
+                "# Change to project directory\n",
+                "%cd battle_city\n",
+                "\n",
+                "# Show files\n",
+                "!ls -la"
+            ],
+            "metadata": {
+                "id": "clone_code"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### 2. Install Dependencies\n",
+                "Install NES emulator, DreamerV3, and JAX (GPU)."
             ],
             "metadata": {
                 "id": "install_md"
@@ -50,21 +72,21 @@
             "execution_count": null,
             "outputs": [],
             "source": [
-                "# 1. System Dependencies for NES emulator\n",
-                "!apt-get update > /dev/null\n",
-                "!apt-get install -y freeglut3-dev > /dev/null\n",
+                "# System dependencies for NES emulator\n",
+                "!apt-get update -qq\n",
+                "!apt-get install -y -qq freeglut3-dev xvfb\n",
                 "\n",
-                "# 2. Python Packages\n",
-                "# DreamerV3 and Embodied from GitHub (Official)\n",
-                "!pip install git+https://github.com/danijar/embodied.git\n",
-                "!pip install git+https://github.com/danijar/dreamerv3.git\n",
+                "# DreamerV3 and Embodied (Official from GitHub)\n",
+                "!pip install -q git+https://github.com/danijar/embodied.git\n",
+                "!pip install -q git+https://github.com/danijar/dreamerv3.git\n",
                 "\n",
                 "# Environment & Utils\n",
-                "!pip install gym gymnasium nes-py opencv-python matplotlib\n",
+                "!pip install -q gym gymnasium nes-py opencv-python matplotlib\n",
                 "\n",
-                "# 3. JAX (GPU)\n",
-                "# Colab usually has JAX pre-installed, but updating is good practice\n",
-                "!pip install -U \"jax[cuda12_pip]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
+                "# JAX (GPU) - Colab compatible\n",
+                "!pip install -q -U \"jax[cuda12_pip]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
+                "\n",
+                "print(\"\\n✅ Installation complete!\")"
             ],
             "metadata": {
                 "id": "install_code"
@@ -73,8 +95,8 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### 2. Verify Files\n",
-                "Ensure all necessary files are present."
+                "### 3. Verify Setup\n",
+                "Check that all required files and imports work."
             ],
             "metadata": {
                 "id": "verify_md"
@@ -86,14 +108,28 @@
             "outputs": [],
             "source": [
                 "import os\n",
-                "required_files = ['BattleCity.nes', 'battle_city_env.py', 'config.py', 'dreamer_wrapper.py', 'train_dreamer.py']\n",
-                "missing = [f for f in required_files if not os.path.exists(f)]\n",
+                "\n",
+                "# Check files\n",
+                "required = ['BattleCity.nes', 'battle_city_env.py', 'dreamer_wrapper.py', 'train_dreamer.py']\n",
+                "missing = [f for f in required if not os.path.exists(f)]\n",
                 "\n",
                 "if missing:\n",
-                "    print(f\"❌ MISSING FILES: {missing}\")\n",
-                "    print(\"Please upload them to the root directory (/content/).\")\n",
+                "    print(f\"❌ Missing: {missing}\")\n",
                 "else:\n",
-                "    print(\"✅ All files found!\")"
+                "    print(\"✅ All files present!\")\n",
+                "\n",
+                "# Test imports\n",
+                "try:\n",
+                "    import jax\n",
+                "    print(f\"✅ JAX devices: {jax.devices()}\")\n",
+                "except Exception as e:\n",
+                "    print(f\"❌ JAX error: {e}\")\n",
+                "\n",
+                "try:\n",
+                "    import dreamerv3\n",
+                "    print(\"✅ DreamerV3 imported\")\n",
+                "except Exception as e:\n",
+                "    print(f\"❌ DreamerV3 error: {e}\")"
             ],
             "metadata": {
                 "id": "verify_code"
@@ -102,14 +138,11 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### 3. Start Training\n",
-                "This launches the training script. \n",
-                "- Check `logs/dreamer` for TensorBoard logs.\n",
-                "- Training will take hours to show significant progress, but Dreamer learns fast.\n",
-                "- Use `TensorBoard` extension to view graphs."
+                "### 4. Launch TensorBoard (Optional)\n",
+                "Monitor training metrics in real-time."
             ],
             "metadata": {
-                "id": "train_md"
+                "id": "tb_md"
             }
         },
         {
@@ -125,10 +158,29 @@
             }
         },
         {
+            "cell_type": "markdown",
+            "source": [
+                "### 5. Start Training 🚀\n",
+                "This launches DreamerV3 training. \n",
+                "- Training logs go to `logs/dreamer`\n",
+                "- Expect initial slow progress, then rapid improvement\n",
+                "- Check TensorBoard for metrics"
+            ],
+            "metadata": {
+                "id": "train_md"
+            }
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "outputs": [],
             "source": [
+                "# Use virtual display (no monitor in Colab)\n",
+                "!Xvfb :1 -screen 0 1024x768x24 &\n",
+                "import os\n",
+                "os.environ['DISPLAY'] = ':1'\n",
+                "\n",
+                "# Launch training\n",
                 "!python train_dreamer.py"
             ],
             "metadata": {
