Fix DreamerV3: proper embodied API, from_gymnasium

--- a/BattleCity_DreamerV3.ipynb
+++ b/BattleCity_DreamerV3.ipynb
@@ -19,11 +19,7 @@
             "source": [
                 "# 🎮 Battle City RL - DreamerV3 Training\n",
                 "\n",
-                "This notebook trains a **DreamerV3** agent to play **Battle City (NES)**.\n",
-                "\n",
-                "## Setup\n",
-                "1. **Runtime**: Go to `Runtime` > `Change runtime type` > Select **T4 GPU** (or better).\n",
-                "2. **Run All**: Execute cells sequentially (Ctrl+F9)."
+                "**Setup:** `Runtime` > `Change runtime type` > **T4 GPU**"
             ],
             "metadata": {
                 "id": "intro_md"
@@ -32,8 +28,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### 1. Clone Repository\n",
-                "First, we clone the project from GitHub."
+                "### 1. Clone Repository"
             ],
             "metadata": {
                 "id": "clone_md"
@@ -44,13 +39,17 @@
             "execution_count": null,
             "outputs": [],
             "source": [
-                "# Clone the repo\n",
-                "!git clone https://github.com/Nikolay1221/x.git battle_city\n",
+                "import os\n",
                 "\n",
-                "# Change to project directory\n",
-                "%cd battle_city\n",
+                "# Clone if not exists\n",
+                "if not os.path.exists('/content/battle_city'):\n",
+                "    !git clone https://github.com/Nikolay1221/x.git /content/battle_city\n",
+                "else:\n",
+                "    print('Repo already cloned!')\n",
                 "\n",
-                "# Show files\n",
+                "# Change directory\n",
+                "os.chdir('/content/battle_city')\n",
+                "print(f'Working dir: {os.getcwd()}')\n",
                 "!ls -la"
             ],
             "metadata": {
@@ -60,11 +59,10 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### 2. Install Dependencies\n",
-                "Install NES emulator, DreamerV3, and JAX (GPU)."
+                "### 2. Install System Dependencies"
             ],
             "metadata": {
-                "id": "install_md"
+                "id": "apt_md"
             }
         },
         {
@@ -72,31 +70,68 @@
             "execution_count": null,
             "outputs": [],
             "source": [
-                "# System dependencies for NES emulator\n",
                 "!apt-get update -qq\n",
                 "!apt-get install -y -qq freeglut3-dev xvfb\n",
-                "\n",
-                "# DreamerV3 and Embodied (Official from GitHub)\n",
-                "!pip install -q git+https://github.com/danijar/embodied.git\n",
-                "!pip install -q git+https://github.com/danijar/dreamerv3.git\n",
-                "\n",
-                "# Environment & Utils\n",
-                "!pip install -q gym gymnasium nes-py opencv-python matplotlib\n",
-                "\n",
-                "# JAX (GPU) - Colab compatible\n",
-                "!pip install -q -U \"jax[cuda12_pip]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
-                "\n",
-                "print(\"\\n✅ Installation complete!\")"
+                "print('✅ System deps installed')"
             ],
             "metadata": {
-                "id": "install_code"
+                "id": "apt_code"
             }
         },
         {
             "cell_type": "markdown",
             "source": [
-                "### 3. Verify Setup\n",
-                "Check that all required files and imports work."
+                "### 3. Install Python Packages"
+            ],
+            "metadata": {
+                "id": "pip_md"
+            }
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "outputs": [],
+            "source": [
+                "# Base packages\n",
+                "!pip install -q gym gymnasium opencv-python matplotlib numpy\n",
+                "!pip install -q nes-py\n",
+                "print('✅ Base packages')"
+            ],
+            "metadata": {
+                "id": "pip_base"
+            }
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "outputs": [],
+            "source": [
+                "# DreamerV3 from GitHub (official)\n",
+                "!pip install -q git+https://github.com/danijar/embodied.git\n",
+                "!pip install -q git+https://github.com/danijar/dreamerv3.git\n",
+                "print('✅ DreamerV3')"
+            ],
+            "metadata": {
+                "id": "pip_dreamer"
+            }
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "outputs": [],
+            "source": [
+                "# JAX with CUDA (pinned compatible versions)\n",
+                "!pip install -q jax==0.4.30 jaxlib==0.4.30+cuda12.cudnn89 -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
+                "print('✅ JAX (GPU)')"
+            ],
+            "metadata": {
+                "id": "pip_jax"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### 4. Verify Setup"
             ],
             "metadata": {
                 "id": "verify_md"
@@ -108,28 +143,30 @@
             "outputs": [],
             "source": [
                 "import os\n",
+                "os.chdir('/content/battle_city')  # Ensure correct dir\n",
                 "\n",
-                "# Check files\n",
                 "required = ['BattleCity.nes', 'battle_city_env.py', 'dreamer_wrapper.py', 'train_dreamer.py']\n",
                 "missing = [f for f in required if not os.path.exists(f)]\n",
                 "\n",
                 "if missing:\n",
-                "    print(f\"❌ Missing: {missing}\")\n",
+                "    print(f'❌ Missing: {missing}')\n",
                 "else:\n",
-                "    print(\"✅ All files present!\")\n",
+                "    print('✅ All files present!')\n",
                 "\n",
-                "# Test imports\n",
+                "# Test JAX\n",
                 "try:\n",
                 "    import jax\n",
-                "    print(f\"✅ JAX devices: {jax.devices()}\")\n",
+                "    print(f'✅ JAX version: {jax.__version__}')\n",
+                "    print(f'✅ JAX devices: {jax.devices()}')\n",
                 "except Exception as e:\n",
-                "    print(f\"❌ JAX error: {e}\")\n",
+                "    print(f'❌ JAX: {e}')\n",
                 "\n",
+                "# Test DreamerV3\n",
                 "try:\n",
                 "    import dreamerv3\n",
-                "    print(\"✅ DreamerV3 imported\")\n",
+                "    print('✅ DreamerV3 OK')\n",
                 "except Exception as e:\n",
-                "    print(f\"❌ DreamerV3 error: {e}\")"
+                "    print(f'❌ DreamerV3: {e}')"
             ],
             "metadata": {
                 "id": "verify_code"
@@ -138,33 +175,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "### 4. Launch TensorBoard (Optional)\n",
-                "Monitor training metrics in real-time."
-            ],
-            "metadata": {
-                "id": "tb_md"
-            }
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "outputs": [],
-            "source": [
-                "%load_ext tensorboard\n",
-                "%tensorboard --logdir logs/dreamer"
-            ],
-            "metadata": {
-                "id": "tensorboard_code"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "### 5. Start Training 🚀\n",
-                "This launches DreamerV3 training. \n",
-                "- Training logs go to `logs/dreamer`\n",
-                "- Expect initial slow progress, then rapid improvement\n",
-                "- Check TensorBoard for metrics"
+                "### 5. Start Training 🚀"
             ],
             "metadata": {
                 "id": "train_md"
@@ -175,12 +186,15 @@
             "execution_count": null,
             "outputs": [],
             "source": [
-                "# Use virtual display (no monitor in Colab)\n",
+                "# Virtual display for NES emulator\n",
                 "!Xvfb :1 -screen 0 1024x768x24 &\n",
                 "import os\n",
                 "os.environ['DISPLAY'] = ':1'\n",
                 "\n",
-                "# Launch training\n",
+                "# Ensure we're in project dir\n",
+                "os.chdir('/content/battle_city')\n",
+                "\n",
+                "# Launch!\n",
                 "!python train_dreamer.py"
             ],
             "metadata": {
