Switch to SheepRL (PyTorch DreamerV3)

--- a/BattleCity_DreamerV3.ipynb
+++ b/BattleCity_DreamerV3.ipynb
@@ -17,189 +17,127 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# 🎮 Battle City RL - DreamerV3 Training\n",
-                "\n",
-                "**Setup:** `Runtime` > `Change runtime type` > **T4 GPU**"
+                "# 🎮 Battle City x DreamerV3 (SheepRL)\n\n**Runtime:** T4 GPU recommended"
             ],
             "metadata": {
-                "id": "intro_md"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "### 1. Clone Repository"
-            ],
-            "metadata": {
-                "id": "clone_md"
+                "id": "intro"
             }
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "source": [
+                "# 1. Clone repo\n",
+                "!rm -rf /content/battle_city\n",
+                "!git clone https://github.com/Nikolay1221/x.git /content/battle_city\n",
+                "%cd /content/battle_city\n",
+                "!ls"
+            ],
+            "metadata": {
+                "id": "clone"
+            },
             "outputs": [],
-            "source": [
-                "import os\n",
-                "\n",
-                "# Clone if not exists\n",
-                "if not os.path.exists('/content/battle_city'):\n",
-                "    !git clone https://github.com/Nikolay1221/x.git /content/battle_city\n",
-                "else:\n",
-                "    print('Repo already cloned!')\n",
-                "\n",
-                "# Change directory\n",
-                "os.chdir('/content/battle_city')\n",
-                "print(f'Working dir: {os.getcwd()}')\n",
-                "!ls -la"
-            ],
-            "metadata": {
-                "id": "clone_code"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "### 2. Install System Dependencies"
-            ],
-            "metadata": {
-                "id": "apt_md"
-            }
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "outputs": [],
             "source": [
+                "# 2. System deps\n",
                 "!apt-get update -qq\n",
-                "!apt-get install -y -qq freeglut3-dev xvfb\n",
-                "print('✅ System deps installed')"
+                "!apt-get install -y -qq freeglut3-dev xvfb"
             ],
             "metadata": {
-                "id": "apt_code"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "### 3. Install Python Packages"
-            ],
-            "metadata": {
-                "id": "pip_md"
-            }
+                "id": "apt"
+            },
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "outputs": [],
             "source": [
-                "# Base packages\n",
-                "!pip install -q gym gymnasium opencv-python matplotlib numpy\n",
-                "!pip install -q nes-py\n",
-                "print('✅ Base packages')"
+                "# 3. Python packages\n",
+                "!pip install -q gymnasium opencv-python matplotlib nes-py\n",
+                "!pip install -q lightning sheeprl\n",
+                "print('✅ Packages installed')"
             ],
             "metadata": {
-                "id": "pip_base"
-            }
+                "id": "pip"
+            },
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "outputs": [],
             "source": [
-                "# DreamerV3 from GitHub (official)\n",
-                "!pip install -q git+https://github.com/danijar/embodied.git\n",
-                "!pip install -q git+https://github.com/danijar/dreamerv3.git\n",
-                "print('✅ DreamerV3')"
-            ],
-            "metadata": {
-                "id": "pip_dreamer"
-            }
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "outputs": [],
-            "source": [
-                "# JAX with CUDA (pinned compatible versions)\n",
-                "!pip install -q jax==0.4.30 jaxlib==0.4.30+cuda12.cudnn89 -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
-                "print('✅ JAX (GPU)')"
-            ],
-            "metadata": {
-                "id": "pip_jax"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "### 4. Verify Setup"
-            ],
-            "metadata": {
-                "id": "verify_md"
-            }
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "outputs": [],
-            "source": [
-                "import os\n",
-                "os.chdir('/content/battle_city')  # Ensure correct dir\n",
-                "\n",
-                "required = ['BattleCity.nes', 'battle_city_env.py', 'dreamer_wrapper.py', 'train_dreamer.py']\n",
-                "missing = [f for f in required if not os.path.exists(f)]\n",
-                "\n",
-                "if missing:\n",
-                "    print(f'❌ Missing: {missing}')\n",
-                "else:\n",
-                "    print('✅ All files present!')\n",
-                "\n",
-                "# Test JAX\n",
-                "try:\n",
-                "    import jax\n",
-                "    print(f'✅ JAX version: {jax.__version__}')\n",
-                "    print(f'✅ JAX devices: {jax.devices()}')\n",
-                "except Exception as e:\n",
-                "    print(f'❌ JAX: {e}')\n",
-                "\n",
-                "# Test DreamerV3\n",
-                "try:\n",
-                "    import dreamerv3\n",
-                "    print('✅ DreamerV3 OK')\n",
-                "except Exception as e:\n",
-                "    print(f'❌ DreamerV3: {e}')"
-            ],
-            "metadata": {
-                "id": "verify_code"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "### 5. Start Training 🚀"
-            ],
-            "metadata": {
-                "id": "train_md"
-            }
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "outputs": [],
-            "source": [
-                "# Virtual display for NES emulator\n",
+                "# 4. Start virtual display\n",
                 "!Xvfb :1 -screen 0 1024x768x24 &\n",
                 "import os\n",
                 "os.environ['DISPLAY'] = ':1'\n",
-                "\n",
-                "# Ensure we're in project dir\n",
-                "os.chdir('/content/battle_city')\n",
-                "\n",
-                "# Launch!\n",
+                "print('✅ Virtual display ready')"
+            ],
+            "metadata": {
+                "id": "xvfb"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "# 5. Test environment\n",
+                "%cd /content/battle_city\n",
                 "!python train_dreamer.py"
             ],
             "metadata": {
-                "id": "run_train"
-            }
+                "id": "test"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "# 6. Train with SheepRL\n",
+                "%cd /content/battle_city\n",
+                "\n",
+                "# Register env first\n",
+                "import sys\n",
+                "sys.path.insert(0, '/content/battle_city')\n",
+                "\n",
+                "import gymnasium as gym\n",
+                "from gymnasium.envs.registration import register\n",
+                "import numpy as np\n",
+                "from battle_city_env import BattleCityEnv\n",
+                "from dreamer_wrapper import BattleCityDreamerWrapper\n",
+                "\n",
+                "class BattleCityGymEnv(gym.Env):\n",
+                "    def __init__(self):\n",
+                "        super().__init__()\n",
+                "        self._env = BattleCityEnv(rom_path='/content/battle_city/BattleCity.nes')\n",
+                "        self._wrapper = BattleCityDreamerWrapper(self._env, size=(64, 64))\n",
+                "        self.observation_space = gym.spaces.Box(0, 255, (64, 64, 1), dtype=np.uint8)\n",
+                "        self.action_space = gym.spaces.Discrete(10)\n",
+                "\n",
+                "    def reset(self, **kw):\n",
+                "        obs, info = self._wrapper.reset(**kw)\n",
+                "        return obs['image'], info\n",
+                "\n",
+                "    def step(self, action):\n",
+                "        obs, r, t, tr, info = self._wrapper.step(action)\n",
+                "        return obs['image'], float(r), t, tr, info\n",
+                "\n",
+                "    def close(self):\n",
+                "        self._env.close()\n",
+                "\n",
+                "register(id='BattleCity-v0', entry_point=lambda: BattleCityGymEnv())\n",
+                "\n",
+                "# Run sheeprl\n",
+                "!python -m sheeprl exp=dreamer_v3 env.id=BattleCity-v0 fabric.devices=1 algo.total_steps=100000"
+            ],
+            "metadata": {
+                "id": "train"
+            },
+            "outputs": [],
+            "execution_count": null
         }
     ]
 }
